uploading final rahshemah interview

--- a/projects/interview/interview-home.html
+++ b/projects/interview/interview-home.html
@@ -22,62 +22,74 @@
               an interview on creativity and self-compassionate joy
             </div>
             <div class="overlap-group">
-              <div class="component-1">
-                <img class="ellipse" src="img/ellipse-1@2x.svg" />
-                <div class="summarize-who-you-ar redhatmono-normal-black-18px">
-                  summarize who you are in a brief sentence or two
-                </div>
-              </div>
-              <div class="component-6">
-                <img class="ellipse" src="img/ellipse-1@2x.svg" />
-                <div class="what-do-you-like-most-about-yourself redhatmono-normal-black-18px">
-                  what do you like most about yourself?
-                </div>
-              </div>
-              <div class="component-2">
-                <img class="ellipse" src="img/ellipse-8@2x.svg" />
-                <div class="what-was-your-dream-job-as-a-child redhatmono-normal-black-18px">
-                  what was your dream job as a child?
-                </div>
-              </div>
-              <div class="component-3">
-                <img class="ellipse" src="img/ellipse-3@2x.svg" />
-                <div class="what-is-your-dream-job-now redhatmono-normal-black-18px">what is your dream job now?</div>
-              </div>
-              <div class="component-8">
-                <img class="ellipse" src="img/ellipse-3@2x.svg" />
-                <div class="what-is-your-relationship-with-art redhatmono-normal-black-18px">
-                  what is your relationship with art?
-                </div>
-              </div>
-              <div class="component-4">
-                <img class="ellipse-1" src="img/ellipse-4@2x.svg" />
-                <div class="describe-what-joy-fe redhatmono-normal-black-18px">
-                  describe what joy feels/looks like to you
-                </div>
-              </div>
-              <div class="component-9">
-                <img class="ellipse" src="img/ellipse-10@2x.svg" />
-                <div class="any-parting-words-of-wisdom redhatmono-normal-black-18px">any parting words of wisdom?</div>
-              </div>
-              <img class="line-1" src="img/line-1-1@1x.svg" />
+              <a href="q1.html">
+                <div class="component-1">
+                  <img class="ellipse" src="img/ellipse-1@2x.svg" />
+                  <div class="summarize-who-you-ar redhatmono-normal-black-18px">
+                    summarize who you are in a brief sentence or two
+                  </div>
+                </div></a
+              ><a href="q6.html">
+                <div class="component-6">
+                  <img class="ellipse" src="img/ellipse-1@2x.svg" />
+                  <div class="what-do-you-like-most-about-yourself redhatmono-normal-black-18px">
+                    what do you like most about yourself?
+                  </div>
+                </div></a
+              ><a href="q2.html">
+                <div class="component-2">
+                  <img class="ellipse" src="img/ellipse-2@2x.svg" />
+                  <div class="what-was-your-dream-job-as-a-child redhatmono-normal-black-18px">
+                    what was your dream job as a child?
+                  </div>
+                </div></a
+              ><a href="q3.html">
+                <div class="component-3">
+                  <img class="ellipse" src="img/ellipse-3@2x.svg" />
+                  <div class="what-is-your-dream-job-now redhatmono-normal-black-18px">what is your dream job now?</div>
+                </div></a
+              ><a href="q8.html">
+                <div class="component-8">
+                  <img class="ellipse" src="img/ellipse-3@2x.svg" />
+                  <div class="what-is-your-relationship-with-art redhatmono-normal-black-18px">
+                    what is your relationship with art?
+                  </div>
+                </div></a
+              ><a href="q4.html">
+                <div class="component-4">
+                  <img class="ellipse-1" src="img/ellipse-4@2x.svg" />
+                  <div class="describe-what-joy-fe redhatmono-normal-black-18px">
+                    describe what joy feels/looks like to you
+                  </div>
+                </div></a
+              ><a href="q9.html">
+                <div class="component-9">
+                  <img class="ellipse" src="img/ellipse-10@2x.svg" />
+                  <div class="any-parting-words-of-wisdom redhatmono-normal-black-18px">
+                    any parting words of wisdom?
+                  </div>
+                </div></a
+              ><img class="pagedivider" src="img/pagedivider@1x.svg" />
             </div>
-            <div class="component-7">
-              <img class="ellipse" src="img/ellipse-8@2x.svg" />
-              <div class="do-you-have-a-favori redhatmono-normal-black-18px">
-                do you have a favorite piece of art? what is it and why?
-              </div>
-            </div>
-            <div class="component-5">
-              <img class="ellipse-1" src="img/ellipse-5@2x.svg" />
-              <div class="if-you-could-have-a redhatmono-normal-black-18px">
-                if you could have a lifetime supply of any snack or food what would it be?
-              </div>
-            </div>
+            <a href="q7.html">
+              <div class="component-7">
+                <img class="ellipse" src="img/ellipse-2@2x.svg" />
+                <div class="do-you-have-a-favori redhatmono-normal-black-18px">
+                  do you have a favorite piece of art? what is it and why?
+                </div>
+              </div></a
+            ><a href="q5.html">
+              <div class="component-5">
+                <img class="ellipse-1" src="img/ellipse-5@2x.svg" />
+                <div class="if-you-could-have-a redhatmono-normal-black-18px">
+                  if you could have a lifetime supply of any snack or food what would it be?
+                </div>
+              </div></a
+            >
           </div>
           <div class="flex-col">
-            <img class="group-1" src="img/group-2@2x.svg" />
-            <img class="img_7231-1" src="img/img-7231-1@2x.png" />
+            <img class="ellipses" src="img/ellipses@2x.svg" />
+            <img class="rahshemaportrait" src="img/rahshemaportrait@2x.png" />
             <div class="rahshemah-wise-they redhatmono-semi-bold-black-18px">
               <span class="redhatmono-semi-bold-black-18px"
                 >rahshemah wise (they/them) is a senior at yale college studying sociology. they are from newark, new
@@ -91,7 +103,7 @@
             </div>
           </div>
         </div>
-        <a href="q1.html"><img class="arrow-1" src="img/arrow-2-1@2x.svg" /> </a>
+        <a href="q1.html"><img class="arrow-1" src="img/arrow-1@2x.svg" /> </a>
         <p class="design-dev-by-lourdes-rohan redhatmono-normal-black-12px">
           <span class="redhatmono-normal-black-12px">design + dev by </span
           ><a href="https://www.lourdesrohan.com/" target="_blank"
