--- a/projects/interview/q1.html
+++ b/projects/interview/q1.html
@@ -15,16 +15,18 @@
     <div class="container-center-horizontal">
       <div class="q1 screen">
         <div class="flex-col">
-          <a href="interview-home.html"><img class="group-2" src="img/group-2@2x.svg" /> </a>
+          <a href="interview-home.html"><img class="group-2" src="img/ellipses@2x.svg" /> </a>
           <div class="overlap-group-container">
             <div class="overlap-group3">
               <img class="line-1" src="img/line-1@1x.svg" />
-              <div class="component-1">
-                <img class="ellipse-1" src="img/ellipse-1@2x.svg" />
-                <div class="summarize-who-you-ar redhatmono-normal-black-18px">
-                  summarize who you are in a brief sentence or two
-                </div>
-              </div>
+              <a href="q1.html">
+                <div class="component-1">
+                  <img class="ellipse-1" src="img/ellipse-1@2x.svg" />
+                  <div class="summarize-who-you-ar redhatmono-normal-black-18px">
+                    summarize who you are in a brief sentence or two
+                  </div>
+                </div></a
+              >
             </div>
             <div class="overlap-group">
               <div class="rectangle-2 border-1px-black"></div>
@@ -37,15 +39,15 @@
                   I don&#39;t want people to have to deal with that.</span
                 >
               </div>
-              <img class="image-3" src="img/image-3@1x.png" />
+              <img class="purplepaper1" src="img/purplepaper1@1x.png" />
             </div>
           </div>
           <a href="interview-home.html"><img class="arrow-2" src="img/arrow-2@2x.svg" /> </a>
         </div>
         <div class="flex-col-1">
           <div class="overlap-group2">
-            <img class="image-2" src="img/image-2@2x.png" />
-            <img class="image-1" src="img/image-1@2x.png" />
+            <img class="purpleflower1" src="img/purpleflower1@2x.png" />
+            <img class="pinkflower1" src="img/pinkflower1@2x.png" />
             <div class="overlap-group1">
               <div class="rectangle-1 border-1px-black"></div>
               <div class="lr-beautiful-that redhatmono-bold-black-18px">
@@ -57,7 +59,7 @@
                   question.</span
                 >
               </div>
-              <img class="image-4" src="img/image-4@2x.png" />
+              <img class="purpletape1" src="img/purpletape1@2x.png" />
             </div>
           </div>
           <a href="q2.html"><img class="arrow-2-1" src="img/arrow-2-1@2x.svg" /> </a>
