--- a/projects/interview/q2.html
+++ b/projects/interview/q2.html
@@ -15,7 +15,7 @@
     <div class="container-center-horizontal">
       <div class="q2 screen">
         <div class="group-container">
-          <a href="interview-home.html"><img class="group-2" src="img/group-2@2x.svg" /> </a>
+          <a href="interview-home.html"><img class="group-2" src="img/ellipses@2x.svg" /> </a>
           <div class="overlap-group4">
             <a href="q1.html"><img class="arrow-2" src="img/arrow-2@2x.svg" /> </a>
             <div class="overlap-group3">
@@ -32,9 +32,9 @@
                 </div>
                 <img class="blue-diamond-washi-t" src="img/blue-diamond-washi-tape-asset-embellishment-1@2x.png" />
               </div>
-              <img class="untitled-design-2" src="img/untitled-design--2-@2x.png" />
+              <img class="bluecakedoodle" src="img/bluecakedoodle@2x.png" />
             </div>
-            <img class="untitled-design-1" src="img/untitled-design--1-@2x.png" />
+            <img class="bluestars" src="img/bluestars@2x.png" />
           </div>
         </div>
         <img class="line-2" src="img/line-1@1x.svg" />
@@ -51,11 +51,11 @@
                   that. a dream to like open, like a little bakery. It&#39;s a very sweet dream.</span
                 >
               </div>
-              <img class="ps_elif-sahin_77894_" src="img/ps-elif-sahin-77894-ribbons-no-1-ribbon-2-pu-1@2x.png" />
+              <img class="bluebow" src="img/bluebow@2x.png" />
             </div>
-            <img class="blue-icing-cupcake-1" src="img/blueicingcupcake-1@2x.png" />
-            <img class="x586ab2641fdce414493f5110-1" src="img/586ab2641fdce414493f5110-1@2x.png" />
-            <img class="untitled-design" src="img/untitled-design@2x.png" />
+            <img class="bluecupcake" src="img/bluecupcake@2x.png" />
+            <img class="bluemacaron" src="img/bluemacaron@2x.png" />
+            <img class="blueasterisk" src="img/blueasterisk@2x.png" />
           </div>
           <a href="q3.html"><img class="arrow-2-1" src="img/arrow-2-1@2x.svg" /> </a>
         </div>
