--- a/projects/interview/q4.html
+++ b/projects/interview/q4.html
@@ -15,16 +15,17 @@
     <div class="container-center-horizontal">
       <div class="q4 screen">
         <div class="overlap-group2">
-          <img class="x3" src="img/3@1x.png" />
-          <div class="component-4">
-            <img class="ellipse-4" src="img/ellipse-4@2x.svg" />
-            <div class="describe-what-joy-fe redhatmono-normal-black-18px">
-              describe what joy feels/looks like to you
-            </div>
-          </div>
-          <a href="q3.html"><img class="arrow-2" src="img/arrow-2@2x.svg" /> </a
+          <img class="greenbranch" src="img/greenbranch@1x.png" />
+          <a href="q4.html">
+            <div class="component-4">
+              <img class="ellipse-4" src="img/ellipse-4@2x.svg" />
+              <div class="describe-what-joy-fe redhatmono-normal-black-18px">
+                describe what joy feels/looks like to you
+              </div>
+            </div></a
+          ><a href="q3.html"><img class="arrow-2" src="img/arrow-2@2x.svg" /> </a
           ><a href="q5.html"><img class="arrow-2-1" src="img/arrow-2-1@2x.svg" /> </a
-          ><a href="interview-home.html"><img class="group-2" src="img/group-2@2x.svg" /> </a
+          ><a href="interview-home.html"><img class="group-2" src="img/ellipses@2x.svg" /> </a
           ><img class="line-3" src="img/line-1@1x.svg" />
           <div class="overlap-group">
             <div class="rectangle-2 border-1px-black"></div>
@@ -36,7 +37,7 @@
                 people.</span
               >
             </div>
-            <img class="x1" src="img/1@2x.png" />
+            <img class="greentape1" src="img/greentape1@2x.png" />
           </div>
           <div class="overlap-group1">
             <div class="rectangle-2-1 border-1px-black"></div>
@@ -45,10 +46,9 @@
               holding space for other people, knowing that like space is also being held for me.<br /><br />like a
               mutual sharing of space.
             </div>
-            <img class="x2" src="img/2@2x.png" />
-            <img class="x3-1" src="img/2@2x.png" />
+            <img class="greentape2" src="img/greentape2@2x.png" />
+            <img class="greentape3" src="img/greentape2@2x.png" />
           </div>
-          <img class="x4" src="img/4@1x.png" />
         </div>
       </div>
     </div>
