--- a/projects/interview/q6.html
+++ b/projects/interview/q6.html
@@ -15,17 +15,18 @@
     <div class="container-center-horizontal">
       <div class="q6 screen">
         <div class="group-container">
-          <a href="interview-home.html"><img class="group-2" src="img/group-2@2x.svg" /> </a>
+          <a href="interview-home.html"><img class="group-2" src="img/ellipses@2x.svg" /> </a>
           <div class="overlap-group5">
             <div class="overlap-group4">
-              <img class="x1" src="img/1@2x.png" />
-              <div class="component-6">
-                <img class="ellipse-7" src="img/ellipse-1@2x.svg" />
-                <div class="what-do-you-like-most-about-yourself redhatmono-normal-black-18px">
-                  what do you like most about yourself?
-                </div>
-              </div>
-              <img class="line-3" src="img/line-1@1x.svg" />
+              <img class="purplecactus" src="img/purplecactus@2x.png" />
+              <a href="q6.html">
+                <div class="component-6">
+                  <img class="ellipse-7" src="img/ellipse-1@2x.svg" />
+                  <div class="what-do-you-like-most-about-yourself redhatmono-normal-black-18px">
+                    what do you like most about yourself?
+                  </div>
+                </div></a
+              ><img class="line-3" src="img/line-1@1x.svg" />
               <div class="overlap-group1">
                 <div class="rectangle-2 border-1px-black"></div>
                 <div class="rw-its-hard redhatmono-bold-black-18px">
@@ -42,9 +43,9 @@
                   >
                 </div>
               </div>
-              <div class="overlap-group3">
-                <img class="x5" src="img/5@1x.png" />
-                <img class="x2" src="img/2@2x.png" />
+              <div class="purple-container">
+                <img class="purpleribbon" src="img/purpleribbon@1x.png" />
+                <img class="purplewatercolor" src="img/purplewatercolor@2x.png" />
               </div>
             </div>
             <a href="q5.html"><img class="arrow-2" src="img/arrow-2@2x.svg" /> </a>
@@ -64,7 +65,7 @@
                 things. I&#39;m just really proud of that because the world was stacked against me.</span
               >
             </div>
-            <img class="x4" src="img/4@2x.png" />
+            <img class="purplepinktape" src="img/purplepinktape@2x.png" />
           </div>
           <a href="q7.html"><img class="arrow-2-1" src="img/arrow-2-1@2x.svg" /> </a>
         </div>
