--- a/projects/interview/q8.html
+++ b/projects/interview/q8.html
@@ -16,14 +16,15 @@
       <div class="q8 screen">
         <div class="overlap-group4">
           <div class="overlap-group3">
-            <img class="x1" src="img/1@1x.png" />
-            <div class="component-8">
-              <img class="ellipse-9" src="img/ellipse-3@2x.svg" />
-              <div class="what-is-your-relationship-with-art redhatmono-normal-black-18px">
-                what is your relationship with art?
-              </div>
-            </div>
-            <a href="q9.html"><img class="arrow-2" src="img/arrow-2-1@2x.svg" /> </a
+            <img class="pinksheetofpaper" src="img/pinksheetofpaper@1x.png" />
+            <a href="q8.html">
+              <div class="component-8">
+                <img class="ellipse-9" src="img/ellipse-3@2x.svg" />
+                <div class="what-is-your-relationship-with-art redhatmono-normal-black-18px">
+                  what is your relationship with art?
+                </div>
+              </div></a
+            ><a href="q9.html"><img class="arrow-2" src="img/arrow-2-1@2x.svg" /> </a
             ><img class="line-3" src="img/line-1@1x.svg" />
             <div class="overlap-group border-1px-black">
               <div class="rw-i-feel-like-art redhatmono-bold-black-18px">
@@ -53,7 +54,7 @@
                   gatekeep art.</span
                 >
               </div>
-              <img class="x2" src="img/2@2x.png" />
+              <img class="pinkpaperstrip" src="img/pinkpaperstrip@2x.png" />
             </div>
             <div class="overlap-group2 border-1px-black">
               <div class="so-i-guess-my-rel redhatmono-normal-black-18px">
@@ -62,10 +63,10 @@
                 particular way.
               </div>
             </div>
-            <img class="x3" src="img/3@2x.png" />
+            <img class="pinktapeq8" src="img/pinktapeq8@2x.png" />
           </div>
           <a href="q7.html"><img class="arrow-2-1" src="img/arrow-2@2x.svg" /> </a
-          ><a href="interview-home.html"><img class="group-2" src="img/group-2@2x.svg" /> </a>
+          ><a href="interview-home.html"><img class="group-2" src="img/ellipses@2x.svg" /> </a>
         </div>
       </div>
     </div>
