--- a/projects/interview/q9.html
+++ b/projects/interview/q9.html
@@ -17,11 +17,14 @@
         <div class="group-container">
           <div class="overlap-group6">
             <div class="overlap-group5">
-              <div class="component-9">
-                <img class="ellipse-10" src="img/ellipse-10@2x.svg" />
-                <div class="any-parting-words-of-wisdom redhatmono-normal-black-18px">any parting words of wisdom?</div>
-              </div>
-              <img class="line-3" src="img/line-1@1x.svg" />
+              <a href="q9.html">
+                <div class="component-9">
+                  <img class="ellipse-10" src="img/ellipse-10@2x.svg" />
+                  <div class="any-parting-words-of-wisdom redhatmono-normal-black-18px">
+                    any parting words of wisdom?
+                  </div>
+                </div></a
+              ><img class="line-3" src="img/line-1@1x.svg" />
               <div class="overlap-group1">
                 <div class="rectangle-2 border-1px-black"></div>
                 <div class="so-like-nothing-m redhatmono-normal-black-18px">
@@ -30,7 +33,7 @@
                   and like we&#39;re literally living in the end of the world.<br />do do what you need to do with the,
                   then under that beautiful.
                 </div>
-                <img class="x1" src="img/1@1x.png" />
+                <img class="greentapeq9" src="img/greentapeq9@1x.png" />
               </div>
             </div>
             <a href="q8.html"><img class="arrow-2" src="img/arrow-2@2x.svg" /> </a>
@@ -49,7 +52,7 @@
                   >
                 </div>
               </div>
-              <img class="x5" src="img/5@2x.png" />
+              <img class="greenflower" src="img/greenflower@2x.png" />
             </div>
             <div class="overlap-group3">
               <div class="overlap-group2 border-1px-black">
@@ -61,10 +64,10 @@
                   >
                 </div>
               </div>
-              <img class="x2" src="img/2@2x.png" />
+              <img class="brightgreentape" src="img/brightgreentape@2x.png" />
             </div>
           </div>
-          <a href="interview-home.html"><img class="group-12" src="img/group-2@2x.svg" /> </a>
+          <a href="interview-home.html"><img class="group-12" src="img/ellipses@2x.svg" /> </a>
         </div>
       </div>
     </div>
