--- a/projects/interview/q3.html
+++ b/projects/interview/q3.html
@@ -14,46 +14,62 @@
     <input type="hidden" id="anPageName" name="page" value="q3" />
     <div class="container-center-horizontal">
       <div class="q3 screen">
-        <div class="overlap-group3">
-          <img class="x4" src="img/4@1x.png" />
-          <div class="overlap-group border-1px-black">
-            <div class="lr-yeah-thats-a-v redhatmono-bold-black-18px">
-              <span class="redhatmono-bold-black-18px">lr:</span
-              ><span class="redhatmono-normal-black-18px">
-                Yeah, that&#39;s a very noble pursuit. <br /><br />Yeah. <br /><br />It&#39;s almost like a question in
-                a vacuum.<br /><br />like if you could just do one thing, not so much as a job, but like as a passion.
-                So you answered that very, very eloquently. Thank you.</span
-              >
+        <div class="flex-row">
+          <div class="group-container">
+            <a href="interview-home.html"><img class="group-2" src="img/ellipses@2x.svg" /> </a>
+            <div class="overlap-group-container">
+              <div class="overlap-group6">
+                <img class="pinkflowerart" src="img/pinkflowerart@1x.png" />
+                <a href="q2.html"><img class="arrow-2" src="img/arrow-2@2x.svg" /> </a>
+                <div class="overlap-group1 border-1px-black">
+                  <div class="rw-i-thought-about redhatmono-bold-black-18px">
+                    <span class="redhatmono-bold-black-18px">rw:</span
+                    ><span class="redhatmono-normal-black-18px">
+                      I thought about that when I looked at the question.<br /><br />um, I think my dream job now would
+                      be<br /><br />to be some kind of like ADHD life coach type vibe.<br /><br />like I just like kind
+                      of meet with people and help them create strategies that make their life easier and somehow make
+                      that like able to live off of.</span
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="overlap-group4">
+                <img class="line-3" src="img/line-1@1x.svg" />
+                <a href="q3.html">
+                  <div class="component-3">
+                    <img class="ellipse-3" src="img/ellipse-3@2x.svg" />
+                    <div class="what-is-your-dream-job-now redhatmono-normal-black-18px">
+                      what is your dream job now?
+                    </div>
+                  </div></a
+                >
+              </div>
+              <div class="overlap-group2">
+                <div class="rectangle-2 border-1px-black"></div>
+                <div class="lr-not-to-like-dre redhatmono-bold-black-18px">
+                  <span class="redhatmono-bold-black-18px">lr: </span
+                  ><span class="redhatmono-normal-black-18px">not to like, dream of labor, but, like, you know</span>
+                </div>
+                <img class="pinktape1" src="img/pinktape1@2x.png" />
+              </div>
             </div>
           </div>
-          <img class="x2" src="img/2@1x.png" /> <a href="q2.html"><img class="arrow-2" src="img/arrow-2@2x.svg" /> </a
-          ><a href="q4.html"><img class="arrow-2-1" src="img/arrow-2-1@2x.svg" /> </a
-          ><a href="interview-home.html"><img class="group-2" src="img/group-2@2x.svg" /> </a
-          ><img class="line-3" src="img/line-1@1x.svg" />
-          <div class="component-3">
-            <img class="ellipse-3" src="img/ellipse-3@2x.svg" />
-            <div class="what-is-your-dream-job-now redhatmono-normal-black-18px">what is your dream job now?</div>
-          </div>
-          <div class="overlap-group1 border-1px-black">
-            <div class="rw-i-thought-about redhatmono-bold-black-18px">
-              <span class="redhatmono-bold-black-18px">rw:</span
-              ><span class="redhatmono-normal-black-18px">
-                I thought about that when I looked at the question.<br /><br />um, I think my dream job now would be<br /><br />to
-                be some kind of like ADHD life coach type vibe.<br /><br />like I just like kind of meet with people and
-                help them create strategies that make their life easier and somehow make that like able to live off
-                of.</span
-              >
+          <div class="flex-col">
+            <div class="overlap-group5">
+              <div class="overlap-group border-1px-black">
+                <div class="lr-yeah-thats-a-v redhatmono-bold-black-18px">
+                  <span class="redhatmono-bold-black-18px">lr:</span
+                  ><span class="redhatmono-normal-black-18px">
+                    Yeah, that&#39;s a very noble pursuit. <br /><br />Yeah. <br /><br />It&#39;s almost like a question
+                    in a vacuum.<br /><br />like if you could just do one thing, not so much as a job, but like as a
+                    passion. So you answered that very, very eloquently. Thank you.</span
+                  >
+                </div>
+              </div>
+              <img class="pinkwatercolorflower" src="img/pinkwatercolorflower@2x.png" />
             </div>
+            <a href="q4.html"><img class="arrow-2-1" src="img/arrow-2-1@2x.svg" /> </a>
           </div>
-          <div class="overlap-group2">
-            <div class="rectangle-2 border-1px-black"></div>
-            <div class="lr-not-to-like-dre redhatmono-bold-black-18px">
-              <span class="redhatmono-bold-black-18px">lr: </span
-              ><span class="redhatmono-normal-black-18px">not to like, dream of labor, but, like, you know</span>
-            </div>
-            <img class="x1" src="img/1@2x.png" />
-          </div>
-          <img class="x5" src="img/5@2x.png" />
         </div>
       </div>
     </div>
