--- a/projects/interview/q5.html
+++ b/projects/interview/q5.html
@@ -15,34 +15,38 @@
     <div class="container-center-horizontal">
       <div class="q5 screen">
         <div class="flex-col">
-          <a href="interview-home.html"><img class="group-2" src="img/group-2@2x.svg" /> </a>
-          <div class="component-5">
-            <img class="ellipse-5" src="img/ellipse-5@2x.svg" />
-            <div class="if-you-could-have-a redhatmono-normal-black-18px">
-              if you could have a lifetime supply of any snack or food what would it be?
-            </div>
-          </div>
-          <div class="overlap-group4">
-            <a href="q4.html"><img class="arrow-2" src="img/arrow-2@2x.svg" /> </a>
-            <div class="overlap-group">
-              <div class="rectangle-2 border-1px-black"></div>
-              <div class="rw-this-is-actually redhatmono-bold-black-18px">
-                <span class="redhatmono-bold-black-18px">rw:</span
-                ><span class="redhatmono-normal-black-18px">
-                  This is actually really hard. <br /><br />God, like, there are a couple of options. I like have safe
-                  foods that like, you know, if I can&#39;t eat anything, I could like eat one of these pretty
-                  consistently. <br /><br />I think my vibe right now is squeezy applesauce. like applesauce that comes
-                  in the packets. <br /><br />There&#39;s something about that. It&#39;s just so healing for my inner
-                  child. She&#39;s like T here. Oh my God. I have like, I love. Something about it being a little
-                  squeezy packet.</span
-                >
+          <a href="interview-home.html"><img class="group-2" src="img/ellipses@2x.svg" /> </a
+          ><a href="q5.html" class="align-self-flex-end">
+            <div class="component-5">
+              <img class="ellipse-5" src="img/ellipse-5@2x.svg" />
+              <div class="if-you-could-have-a redhatmono-normal-black-18px">
+                if you could have a lifetime supply of any snack or food what would it be?
               </div>
-              <img class="x4" src="img/4@1x.png" />
+            </div></a
+          >
+          <div class="overlap-group5">
+            <div class="overlap-group-container">
+              <div class="overlap-group">
+                <div class="rectangle-2 border-1px-black"></div>
+                <div class="rw-this-is-actually redhatmono-bold-black-18px">
+                  <span class="redhatmono-bold-black-18px">rw:</span
+                  ><span class="redhatmono-normal-black-18px">
+                    This is actually really hard. <br /><br />God, like, there are a couple of options. I like have safe
+                    foods that like, you know, if I can&#39;t eat anything, I could like eat one of these pretty
+                    consistently. <br /><br />I think my vibe right now is squeezy applesauce. like applesauce that
+                    comes in the packets. <br /><br />There&#39;s something about that. It&#39;s just so healing for my
+                    inner child. She&#39;s like T here. Oh my God. I have like, I love. Something about it being a
+                    little squeezy packet.</span
+                  >
+                </div>
+                <img class="goldtape" src="img/goldtape@1x.png" />
+              </div>
+              <div class="overlap-group3">
+                <img class="sun" src="img/sun@2x.png" />
+                <img class="mottsapplesauce" src="img/mottsapplesauce@2x.png" />
+              </div>
             </div>
-            <div class="overlap-group3">
-              <img class="x5" src="img/5@2x.png" />
-              <img class="x1" src="img/1@2x.png" />
-            </div>
+            <a href="q4.html"><img class="arrow-2" src="img/arrow-2@2x.svg" /> </a>
           </div>
         </div>
         <img class="line-3" src="img/line-1@1x.svg" />
@@ -57,7 +61,7 @@
                 squeezy packet that just never runs out?</span
               >
             </div>
-            <img class="x2" src="img/2@2x.png" />
+            <img class="yellowtape" src="img/yellowtape@2x.png" />
           </div>
           <div class="overlap-group2">
             <div class="rectangle-2-2 border-1px-black"></div>
