--- a/projects/interview/q7.html
+++ b/projects/interview/q7.html
@@ -14,17 +14,18 @@
     <input type="hidden" id="anPageName" name="page" value="q7" />
     <div class="container-center-horizontal">
       <div class="q7 screen">
-        <a href="interview-home.html"><img class="group-2" src="img/group-2@2x.svg" /> </a>
+        <a href="interview-home.html"><img class="group-2" src="img/ellipses@2x.svg" /> </a>
         <div class="overlap-group6">
           <div class="overlap-group-container">
             <div class="overlap-group5">
-              <div class="component-7">
-                <img class="ellipse-8" src="img/ellipse-8@2x.svg" />
-                <div class="do-you-have-a-favori redhatmono-normal-black-18px">
-                  do you have a favorite piece of art? what is it and why?
-                </div>
-              </div>
-              <a href="q6.html"><img class="arrow-2" src="img/arrow-2@2x.svg" /> </a>
+              <a href="q7.html">
+                <div class="component-7">
+                  <img class="ellipse-8" src="img/ellipse-2@2x.svg" />
+                  <div class="do-you-have-a-favori redhatmono-normal-black-18px">
+                    do you have a favorite piece of art? what is it and why?
+                  </div>
+                </div></a
+              ><a href="q6.html"><img class="arrow-2" src="img/arrow-2@2x.svg" /> </a>
               <div class="overlap-group">
                 <div class="rectangle-2 border-1px-black"></div>
                 <div class="rw-okay-i-have-to redhatmono-bold-black-18px">
@@ -39,11 +40,11 @@
                     own.</span
                   >
                 </div>
-                <img class="x2" src="img/2@2x.png" />
-                <img class="x3" src="img/2@2x.png" />
+                <img class="bluetape1" src="img/bluetape1@2x.png" />
+                <img class="bluetape2" src="img/bluetape1@2x.png" />
               </div>
               <img class="line-3" src="img/line-1@1x.svg" />
-              <img class="x3-1" src="img/3@2x.png" />
+              <img class="bluewaxseal" src="img/bluewaxseal@2x.png" />
             </div>
             <div class="overlap-group4">
               <div class="overlap-group1 border-1px-black">
@@ -67,7 +68,7 @@
                   >
                 </div>
               </div>
-              <img class="x1" src="img/1@1x.png" />
+              <img class="stripybluetape" src="img/stripybluetape@1x.png" />
             </div>
           </div>
           <a href="q8.html"><img class="arrow-2-1" src="img/arrow-2-1@2x.svg" /> </a>
