--- a/projects/interview/q3.html
+++ b/projects/interview/q3.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=1512, maximum-scale=1.0" />
-    <link rel="shortcut icon" type="image/png" href="https://animaproject.s3.amazonaws.com/home/favicon.png" />
+<link rel="shortcut icon" type="image/png" href="img/bluemacaron@2x.png"/>
     <meta name="og:type" content="website" />
-    <meta name="twitter:card" content="photo" />
     <link rel="stylesheet" type="text/css" href="css/q3.css" />
     <link rel="stylesheet" type="text/css" href="css/styleguide.css" />
     <link rel="stylesheet" type="text/css" href="css/globals.css" />
