keyboard instrument project

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <br>
         <a href="exercises/pictures/picture_exercise.html">Arrangement of Pictures</a>
     <br>
+    <a href="exercises/pictures/keyboard_instrument.html">Keyboard Instrument</a>
     <br>
     <div>
       <h2> About this site</h2>
