input output exercis

--- a/exercises/keyboard_instrument/keyboardinstrument.html
+++ b/exercises/keyboard_instrument/keyboardinstrument.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="keyboardinstrument.css">
   </head>
   <body>
+    <div id="home"> 
+      home
+    </div>
     <!-- HTML goes here -->
     <div class="message">press any letter key</div>
 
