--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <br>
     <a href="exercises/keyboard_instrument/keyboardinstrument.html">Keyboard Instrument</a>
     <br>
+    <a href="exercises/inputoutput/index.html">Input/Output</a>
+    <br>
     <div>
       <h2> About this site</h2>
       <p>Hi there! This site is my first web development project I've done from scratch, made with skills I'm learning in ART 369 at the Yale School of Art. It contains my projects, exercises, and experiments with HTML, CSS, and Javascript. Thanks for checking it out!/p>
