--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="projects/interview/interview-home.html">Project 1: Interview</a>
       </li>
       <li>
-        Project 2 (coming soon!)
+        <a href="projects/tool/toolproj.html">Project 2: Tool</a>
       </li>
       <li>
         Project 3 (coming soon!)
