bug fix on tool

--- a/projects/tool/toolproj.html
+++ b/projects/tool/toolproj.html
@@ -16,22 +16,14 @@
 <br>
 <div id= "vibes">what are the vibes?</div>
 <br>
-
-<section class="options">
+tame v spicy
 <div>
-<label class="switch" id="tame">
-  <input type="checkbox">
+<label class="switch" >
+  <input type="checkbox" id="vibetoggle">
   <span class="slider round"></span>
 </label>
 <br>
-tame</div>
-<div>
-<label class="switch" id="spicy">
-  <input type="checkbox">
-  <span class="slider round"></span>
-</label>
-<br>
-spicy</div>
+</div>
 </section>
 <div class="gradient"></div>
 
